--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift - Changed by Gary</h1>
+            <h1>Welcome to your Node.js application on OpenShift - Changed by Demo</h1>
           </hgroup>
 
 
